--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -33,10 +33,12 @@ jobs:
 
     steps:
     - name: Checkout the repository to the runner
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
     - name: Setup Terraform with specified version on the runner
-      uses: hashicorp/setup-terraform@v2
+      uses: hashicorp/setup-terraform@v4
+      #     with:
+      #        terraform_version: 1.7.
 
     - name: Terraform init
       id: init
