--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -36,9 +36,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Terraform with specified version on the runner
-      uses: hashicorp/setup-terraform@v4
-      #     with:
-      #        terraform_version: 1.7.
+      uses: hashicorp/setup-terraform@v2
+     with:
+        terraform_version: 1.7.4
 
     - name: Terraform init
       id: init
