--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -33,7 +33,7 @@ jobs:
 
     steps:
     - name: Checkout the repository to the runner
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Setup Terraform with specified version on the runner
       uses: hashicorp/setup-terraform@v2
@@ -46,7 +46,7 @@ jobs:
 
     - name: Terraform format
       id: fmt
-      run: terraform fmt
+      run: terraform fmt -check
 
     - name: Terraform validate
       id: validate
