--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -62,6 +62,7 @@ jobs:
       if: steps.plan.outcome == 'failure'
       run: exit 1
 
-#     - name: Terraform Apply
-#       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-#       run: terraform apply -auto-approve -input=false
+    - name: Terraform Apply
+      id: apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false
