--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
     - stage
+    - main
     paths:
     - terraform/**
   pull_request:
     branches:
     - stage
+    - main
     paths:
     - terraform/**
 
