--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -67,4 +67,4 @@ jobs:
     - name: Terraform Apply
       id: apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform destroy -auto-approve -input=false -parallelism=1 planfile
+      run: terraform destroy -auto-approve -input=false -parallelism=1
